smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/2.1/inline-io.smithy
$version: "2.1"

namespace smithy.example

operation GetWidget {
    input := {
        widgetId: String
    }
    output := {
        name: String
        description: String
    }
}
