smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/inline-io/inline-io-in-explicit-1-0.smithy
// Inlined operation inputs and outputs can only be used with Smithy version 2 or later. Attempted to use inlined IO with version `1.0`.
$version: "1.0"
namespace smithy.example

operation MyOperation {
    input := {}
}
